2001-11-18  Mads Bondo Dydensborg  <madsdyd@mother>

	* Sound
	Added soundmanager
	Added sound when a brick goes (should probably be scriptable)
	Fixed menu background missing

2001-11-17  Mads Bondo Dydensborg  <madsdyd@mother>

	* Gameplay
	Made the game change maps, when a map is completed
	Updated the TODO file
	Tagged version 0.0.10
	Started adding sounds to events.

2001-11-16  Mads Bondo Dydensborg  <madsdyd@mother>

	* Gameplay
	Added a score and lives display
	Game now adds balls, and reduces lives
	Added a gameover menu
	Fixed crash on exit

2001-11-14  Mads Bondo Dydensborg  <madsdyd@mother>

	* Gameplay
	Added a THole, that can swallow a ball. 
	First steps towards rounds, score and such.

2001-11-13  Mads Bondo Dydensborg  <madsdyd@mother>

	* Version
	Tagging version 0.0.8
	Includes Jonas collision things.
	Includes various stuff, 

2001-11-11  Mads Bondo Dydensborg  <madsdyd@mother>

	* Version
	Stepped the version number to 0.0.8

2001-11-05  Mads Bondo Dydensborg  <madsdyd@mother>

	* Menu
	Fiddled a bit with the in game menu
	Made the minimum version check of python work
	Made the "end game" and Toggle Full Screen work

2001-11-04  Mads Bondo Dydensborg  <madsdyd@mother>

	* Menu
	Implemented the pre game menu
	Implemented the in game menu
	Still lacks game "turns" stuff

2001-11-03  Mads Bondo Dydensborg  <madsdyd@mother>

	* Menu
	Added a fontmanager, made the highscore use it
	Added menu class, no implementation yet

2001-11-02  Mads Bondo Dydensborg  <madsdyd@ripley>
        * Graphics
	Added graphics from Bjarke
	Changed size of screen to 800x600
	Changed maps (map1.py and map2.py)
	Added toggle between fullscreen and window 

2001-10-21  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Python
	Fixed the bugs that made it impossible to run maps.

2001-10-18  Mads Bondo Dydensborg  <madsdyd@ripley.localdomain>

	* Stuff
	Added a LogLineExt method to the log system.

2001-10-15  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Structure